--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository               : "liuwj2000/liuwj2000.github.io"
 # Site Author
 author:
   name             : "Shuai Liu"
-  avatar           : "images/ls.png"
+  avatar           : "images/ls.jpg"
   bio              : "home page for Shuai Liu"
   location         : "Singapore, Singapore"
   employer         :
