--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com.sg/citations?hl=zh-CN&user=NOWOyzUAAAAJ"
-  email            : "aioueh@163.com"
+  email1           : "aioueh@163.com"
+  email           : "Shuai002@e.ntu.edu.sg"
   researchgate     :  "https://www.researchgate.net/profile/Shuai-Liu-119"
   uri              :
   bitbucket        :
